s3 bucket setup implemented

--- a/src/utils/mailTemplate/mailTemplate.html
+++ b/src/utils/mailTemplate/mailTemplate.html
@@ -43,8 +43,8 @@
     <body>
         <div class="container">
             <h1>Verify Your OTP</h1>
-            <p>Dear User,</p>
-            <p>We received a request to verify your email address. To complete the process, please use the OTP code below:</p>
+            <p>Dear ${username},</p>
+            <p>We received a request to verify your email ${email}. To complete the process, please use the OTP code below:</p>
             <div class="otp-box">${otp}</div>
             <p>This OTP is valid for the next 5 minutes. If you did not request this, please ignore this message.</p>
             <div class="footer">
