--- a/src/utils/mailTemplate/mailTemplate.html
+++ b/src/utils/mailTemplate/mailTemplate.html
@@ -1,55 +1,322 @@
-<html>
-    <head>
-        <style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Email Verification - MessageSlake</title>
+    <style>
+        /* Reset & Base Styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+            padding: 40px 20px;
+            line-height: 1.6;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+
+        /* Main Container */
+        .email-wrapper {
+            max-width: 600px;
+            margin: 0 auto;
+            background: #ffffff;
+            border-radius: 16px;
+            overflow: hidden;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Header Section */
+        .header {
+            background: linear-gradient(135deg, #000000 0%, #1a1a1a 100%);
+            padding: 40px 30px;
+            text-align: center;
+            border-bottom: 3px solid #ffffff;
+        }
+
+        .logo {
+            font-size: 32px;
+            font-weight: 800;
+            color: #ffffff;
+            letter-spacing: -1px;
+            margin-bottom: 8px;
+            text-transform: uppercase;
+        }
+
+        .tagline {
+            font-size: 14px;
+            color: #cccccc;
+            font-weight: 400;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
+
+        /* Content Section */
+        .content {
+            padding: 50px 40px;
+            background: #ffffff;
+        }
+
+        .greeting {
+            font-size: 28px;
+            font-weight: 700;
+            color: #000000;
+            margin-bottom: 20px;
+            letter-spacing: -0.5px;
+        }
+
+        .username {
+            color: #1a1a1a;
+            font-weight: 600;
+        }
+
+        .message {
+            font-size: 16px;
+            color: #4a4a4a;
+            line-height: 1.8;
+            margin-bottom: 16px;
+        }
+
+        .email-highlight {
+            color: #000000;
+            font-weight: 600;
+            background: #f5f5f5;
+            padding: 2px 8px;
+            border-radius: 4px;
+        }
+
+        /* OTP Section */
+        .otp-section {
+            margin: 40px 0;
+            text-align: center;
+        }
+
+        .otp-label {
+            font-size: 13px;
+            color: #666666;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+            margin-bottom: 16px;
+            font-weight: 600;
+        }
+
+        .otp-box {
+            display: inline-block;
+            background: linear-gradient(135deg, #000000 0%, #2d2d2d 100%);
+            color: #ffffff;
+            font-size: 36px;
+            font-weight: 800;
+            letter-spacing: 12px;
+            padding: 24px 48px;
+            border-radius: 12px;
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+            border: 2px solid #ffffff;
+            font-family: 'Courier New', monospace;
+        }
+
+        /* Info Box */
+        .info-box {
+            background: #f8f8f8;
+            border-left: 4px solid #000000;
+            padding: 20px 24px;
+            margin: 30px 0;
+            border-radius: 8px;
+        }
+
+        .info-box p {
+            font-size: 14px;
+            color: #4a4a4a;
+            line-height: 1.6;
+            margin: 0;
+        }
+
+        .info-box strong {
+            color: #000000;
+            font-weight: 700;
+        }
+
+        /* Warning Section */
+        .warning {
+            background: #1a1a1a;
+            color: #ffffff;
+            padding: 20px 24px;
+            border-radius: 8px;
+            margin: 30px 0;
+            text-align: center;
+        }
+
+        .warning p {
+            font-size: 14px;
+            margin: 0;
+            line-height: 1.6;
+        }
+
+        /* Divider */
+        .divider {
+            height: 1px;
+            background: linear-gradient(to right, transparent, #e0e0e0, transparent);
+            margin: 40px 0;
+        }
+
+        /* Footer */
+        .footer {
+            background: #f5f5f5;
+            padding: 40px 30px;
+            text-align: center;
+            border-top: 1px solid #e0e0e0;
+        }
+
+        .footer-text {
+            font-size: 13px;
+            color: #666666;
+            margin-bottom: 12px;
+            line-height: 1.6;
+        }
+
+        .copyright {
+            font-size: 12px;
+            color: #999999;
+            margin-top: 20px;
+        }
+
+        .footer-links {
+            margin: 20px 0;
+        }
+
+        .footer-link {
+            color: #000000;
+            text-decoration: none;
+            font-size: 12px;
+            font-weight: 600;
+            margin: 0 12px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .footer-link:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive Design */
+        @media only screen and (max-width: 600px) {
             body {
-                font-family: Arial, sans-serif;
-                color: #333;
+                padding: 20px 10px;
             }
-            .container {
-                max-width: 600px;
-                margin: 0 auto;
-                padding: 20px;
-                background-color: #f9f9f9;
-                border-radius: 8px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+            .content {
+                padding: 40px 24px;
             }
-            h1 {
-                color: #4CAF50;
+
+            .greeting {
                 font-size: 24px;
-                margin-bottom: 20px;
             }
-            p {
-                font-size: 16px;
-                line-height: 1.5;
-            }
+
             .otp-box {
-                margin-top: 20px;
-                padding: 10px 20px;
-                background-color: #f1f1f1;
-                border-radius: 5px;
-                font-size: 20px;
-                font-weight: bold;
-                color: #333;
-                display: inline-block;
+                font-size: 28px;
+                letter-spacing: 8px;
+                padding: 20px 32px;
             }
+
+            .header {
+                padding: 30px 20px;
+            }
+
+            .logo {
+                font-size: 28px;
+            }
+
             .footer {
-                margin-top: 30px;
-                font-size: 14px;
-                color: #888;
-                text-align: center;
+                padding: 30px 20px;
             }
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <h1>Verify Your OTP</h1>
-            <p>Dear ${username},</p>
-            <p>We received a request to verify your email ${email}. To complete the process, please use the OTP code below:</p>
-            <div class="otp-box">${otp}</div>
-            <p>This OTP is valid for the next 5 minutes. If you did not request this, please ignore this message.</p>
-            <div class="footer">
-                <p>&copy; 2024 Saurabh Bharti. </p>
-            </div>
+
+            .footer-link {
+                display: block;
+                margin: 8px 0;
+            }
+        }
+
+        /* Dark Mode Support */
+        @media (prefers-color-scheme: dark) {
+            .email-wrapper {
+                box-shadow: 0 20px 60px rgba(255, 255, 255, 0.1);
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="email-wrapper">
+        <!-- Header -->
+        <div class="header">
+            <div class="logo">MessageSlake</div>
+            <div class="tagline">Secure Communication</div>
         </div>
-    </body>
+
+        <!-- Content -->
+        <div class="content">
+            <h1 class="greeting">Hello, <span class="username">${username}</span>!</h1>
+            
+            <p class="message">
+                We received a request to verify your email address 
+                <span class="email-highlight">${email}</span>. 
+                To complete the verification process, please use the One-Time Password (OTP) provided below.
+            </p>
+
+            <!-- OTP Section -->
+            <div class="otp-section">
+                <div class="otp-label">Your Verification Code</div>
+                <div class="otp-box">${otp}</div>
+            </div>
+
+            <!-- Info Box -->
+            <div class="info-box">
+                <p>
+                    <strong>⏱️ Time Sensitive:</strong> This OTP is valid for the next <strong>5 minutes</strong>. 
+                    Please enter it promptly to complete your verification.
+                </p>
+            </div>
+
+            <p class="message">
+                Simply copy the code above and paste it into the verification field on our platform. 
+                Once verified, you'll have full access to all MessageSlake features.
+            </p>
+
+            <!-- Warning -->
+            <div class="warning">
+                <p>
+                    🔒 <strong>Security Notice:</strong> If you didn't request this verification, 
+                    please ignore this email. Your account remains secure.
+                </p>
+            </div>
+
+            <div class="divider"></div>
+
+            <p class="message" style="font-size: 14px; color: #666666;">
+                Need help? Our support team is available 24/7 to assist you with any questions or concerns.
+            </p>
+        </div>
+
+        <!-- Footer -->
+        <div class="footer">
+            <p class="footer-text">
+                Thank you for choosing <strong>MessageSlake</strong> for your communication needs.
+            </p>
+            
+            <div class="footer-links">
+                <a href="#" class="footer-link">Help Center</a>
+                <a href="#" class="footer-link">Privacy Policy</a>
+                <a href="#" class="footer-link">Terms of Service</a>
+            </div>
+
+            <p class="copyright">
+                &copy; 2024 MessageSlake by Saurabh Bharti. All rights reserved.
+            </p>
+        </div>
+    </div>
+</body>
 </html>
